--- a/yummy-web/public/locales/ru/common.json
+++ b/yummy-web/public/locales/ru/common.json
@@ -1,3 +1,8 @@
 {
-  "test": "test"
+  "loginToSystem": "Вход в систему",
+  "login": "Логин",
+  "password": "Пароль",
+  "enter": "Войти",
+  "register": "Зарегистрироваться",
+  "forgotPassword": "Забыли пароль?"
 }
