add auth and header

--- a/yummy-web/public/locales/ru/common.json
+++ b/yummy-web/public/locales/ru/common.json
@@ -6,5 +6,7 @@
   "forgotPassword": "Забыли пароль?",
   "registerToSystem": "Регистрация в системе",
   "username": "Имя пользователя",
-  "email": "Электронная почта"
+  "email": "Электронная почта",
+  "main": "Главная",
+  "exit": "Выход"
 }
