--- a/yummy-web/public/locales/ru/common.json
+++ b/yummy-web/public/locales/ru/common.json
@@ -8,5 +8,14 @@
   "username": "Имя пользователя",
   "email": "Электронная почта",
   "main": "Главная",
-  "exit": "Выход"
+  "exit": "Выход",
+  "allMenus": "Все меню",
+  "create": "Создать",
+  "edit": "Редактировать",
+  "delete": "Удалить",
+  "author": "Автор",
+  "title": "Название",
+  "description": "Описание",
+  "cancel": "Отменить",
+  "createMenu": "Создать меню"
 }
