add update and delete menu

--- a/yummy-web/public/locales/ru/common.json
+++ b/yummy-web/public/locales/ru/common.json
@@ -17,5 +17,6 @@
   "title": "Название",
   "description": "Описание",
   "cancel": "Отменить",
-  "createMenu": "Создать меню"
+  "createMenu": "Создать меню",
+  "save": "Сохранить"
 }
