rewrite by new design

--- a/yummy-web/public/locales/en/common.json
+++ b/yummy-web/public/locales/en/common.json
@@ -1,3 +1,4 @@
 {
-  "loginToSystem": "Login to system"
+  "loginToSystem": "Login to system",
+  "signInToAccessAccount": "Sign in to get access to your account"
 }
