--- a/yummy-web/public/locales/ru/common.json
+++ b/yummy-web/public/locales/ru/common.json
@@ -1,22 +1,34 @@
 {
-  "loginToSystem": "Вход в систему",
-  "password": "Пароль",
-  "enter": "Войти",
-  "register": "Зарегистрироваться",
+  "welcomeBack": "Добро пожаловать",
+  "signInToAccessAccount": "Войдите, чтобы получить доступ к своей учетной записи",
+  "typeIn": "Введите",
+  "rememberMe": "Запомнить меня",
   "forgotPassword": "Забыли пароль?",
-  "registerToSystem": "Регистрация в системе",
+  "noAccount": "Нет аккаунта?",
+  "signUp": "Зарегистрируйтесь",
+  "orContinueWith": "Или продолжите с",
+  "createAccount": "Создайте аккаунт",
+  "createAccountToStart": "Зарегистрируйтесь, чтобы начать",
+  "alreadyHaveAccount": "Уже есть аккаунт?",
+  "signIn": "Войти",
   "username": "Имя пользователя",
   "email": "Электронная почта",
+  "password": "Пароль",
+  "register": "Зарегистрироваться",
   "main": "Главная",
-  "exit": "Выход",
-  "allMenus": "Все меню",
-  "create": "Создать",
-  "edit": "Редактировать",
-  "delete": "Удалить",
-  "author": "Автор",
+  "exit": "Выйти",
+  "menu": "Меню",
+  "settings": "Настройки",
+  "yourMenus": "Ваши меню",
+  "selectDishMenu": "Выберите меню блюд — свои или созданные другими пользователями",
+  "createMenu": "Создать меню",
+  "authorBy": "Автор: {{author}}",
+  "editMenu": "Редактировать меню",
   "title": "Название",
   "description": "Описание",
+  "save": "Сохранить",
   "cancel": "Отменить",
-  "createMenu": "Создать меню",
-  "save": "Сохранить"
+  "deleteMenu": "Удалить меню",
+  "create": "Создать",
+  "dataNotFound": "Упс! Кажется, тут пусто..."
 }
