add menu details page

--- a/yummy-web/public/locales/ru/common.json
+++ b/yummy-web/public/locales/ru/common.json
@@ -30,5 +30,6 @@
   "cancel": "Отменить",
   "deleteMenu": "Удалить меню",
   "create": "Создать",
-  "dataNotFound": "Упс! Кажется, тут пусто..."
+  "dataNotFound": "Упс! Кажется, тут пусто...",
+  "addDish": "Добавить блюдо"
 }
