--- a/yummy-web/public/locales/ru/common.json
+++ b/yummy-web/public/locales/ru/common.json
@@ -17,18 +17,18 @@
   "register": "Зарегистрироваться",
   "main": "Главная",
   "exit": "Выйти",
-  "menu": "Меню",
+  "collection": "Подборки",
   "settings": "Настройки",
-  "yourMenus": "Ваши меню",
-  "selectDishMenu": "Выберите меню блюд — свои или созданные другими пользователями",
-  "createMenu": "Создать меню",
+  "yourCollections": "Ваши подборки",
+  "selectDishCollection": "Выберите подборку блюд — свои или созданные другими пользователями",
+  "createCollection": "Создать подборку",
   "authorBy": "Автор: {{author}}",
-  "editMenu": "Редактировать меню",
+  "editCollection": "Редактировать подборку",
   "title": "Название",
   "description": "Описание",
   "save": "Сохранить",
   "cancel": "Отменить",
-  "deleteMenu": "Удалить меню",
+  "deleteCollection": "Удалить подборку",
   "create": "Создать",
   "dataNotFound": "Упс! Кажется, тут пусто...",
   "addDish": "Добавить блюдо"
