--- a/yummy-web/public/locales/ru/common.json
+++ b/yummy-web/public/locales/ru/common.json
@@ -17,7 +17,7 @@
   "register": "Зарегистрироваться",
   "main": "Главная",
   "exit": "Выйти",
-  "collection": "Подборки",
+  "collections": "Подборки",
   "settings": "Настройки",
   "yourCollections": "Ваши подборки",
   "selectDishCollection": "Выберите подборку блюд — свои или созданные другими пользователями",
@@ -31,5 +31,7 @@
   "deleteCollection": "Удалить подборку",
   "create": "Создать",
   "dataNotFound": "Упс! Кажется, тут пусто...",
-  "addDish": "Добавить блюдо"
+  "addDish": "Добавить блюдо",
+  "dishes": "Блюда",
+  "yourDishes": "Ваши блюда"
 }
