--- a/yummy-web/public/locales/ru/common.json
+++ b/yummy-web/public/locales/ru/common.json
@@ -47,5 +47,6 @@
   "pageNotFound": "Страница не найдена",
   "pageNotFoundDescription": "Похоже, мы не можем найти эту страницу. Возможно, она была удалена или перемещена.",
   "goToHome": "Перейти на главную",
-  "goBack": "Вернуться назад"
+  "goBack": "Вернуться назад",
+  "changeDishCollections": "Изменить подборки блюда"
 }
